Fix policy_util iterator and re-enable networking tests

This fixes a DCHECK that exposed a poor assumption in
RemoveFakeCredentials about DictionaryValue iteration. It was exposed
with this CL:
https://codereview.chromium.org/2807953002

It also re-enables tests the disabled tests.

BUG=710241

Review-Url: https://codereview.chromium.org/2810703005
Cr-Commit-Position: refs/heads/master@{#463783}

Former-commit-id: 6e4bc12318fac3839ddf6f0b69dcbd5bfd962b56