chrome/browser/extensions/api/networking_private/networking_private_chromeos_apitest.cc
@@ -681,9 +681,7 @@ IN_PROC_BROWSER_TEST_F(NetworkingPrivateChromeOSApiTest,
 }
 
 // TODO(stevenjb): Find a better way to set this up on Chrome OS.
-// TODO(stevenjb): https://crbug.com/710241
-IN_PROC_BROWSER_TEST_F(NetworkingPrivateChromeOSApiTest,
-                       DISABLED_GetManagedProperties) {
+IN_PROC_BROWSER_TEST_F(NetworkingPrivateChromeOSApiTest, GetManagedProperties) {
   const std::string uidata_blob =
       "{ \"user_settings\": {"
       "      \"WiFi\": {"
